--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 .1_2 { 
 	overflow:hidden;
 }
-.e1_2 { 
+.browserwindow_1_2 { 
 	background-color:rgba(11.000000294297934, 12.000000234693289, 23.000000528991222, 1);
 	width:1920px;
 	height:2027px;
 	position:absolute;
 }
-.e1_16 { 
+.rectangle_1_1_16 { 
 	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
 	width:1580px;
 	height:1989px;
@@ -15,7 +15,7 @@
 	left:340px;
 	top:38px;
 }
-.e104_8 { 
+.rectangle_5_104_8 { 
 	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
 	width:732px;
 	height:606px;
@@ -30,7 +30,7 @@
 .104_2 { 
 	border:10px solid rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
 }
-.e104_2 { 
+.11307s6d9s0bwv8sacl6ks5evjqtvov7b7lmhlurzqavxh1m8qhkwbs5c8f0ms8flv__ykdvgb076kgrpibkjm_rjtkploxl_1_104_2 { 
 	width:1520px;
 	height:598.4251708984375px;
 	position:absolute;
@@ -44,7 +44,7 @@
 	background-repeat:no-repeat;
 	background-size:cover;
 }
-.e104_7 { 
+.rectangle_4_104_7 { 
 	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
 	width:726px;
 	height:606px;
@@ -56,7 +56,7 @@
 	border-bottom-left-radius:30px;
 	border-bottom-right-radius:30px;
 }
-.e104_9 { 
+.astroneer_xbox_01_1_104_9 { 
 	width:726px;
 	height:303px;
 	position:absolute;
@@ -67,7 +67,7 @@
 	background-repeat:no-repeat;
 	background-size:cover;
 }
-.e104_10 { 
+.test_104_10 { 
 	color:rgba(255, 255, 255, 1);
 	width:732px;
 	height:303px;
@@ -79,7 +79,7 @@
 	font-size:23px;
 	letter-spacing:0;
 }
-.e104_12 { 
+.test_104_12 { 
 	color:rgba(255, 255, 255, 1);
 	width:732px;
 	height:303px;
@@ -91,7 +91,7 @@
 	font-size:23px;
 	letter-spacing:0;
 }
-.e104_11 { 
+.20201222145428_1_1_104_11 { 
 	width:732px;
 	height:300px;
 	position:absolute;
@@ -102,15 +102,27 @@
 	background-repeat:no-repeat;
 	background-size:cover;
 }
-.e1_18 { 
+.soon_127_13 { 
+	color:rgba(255, 255, 255, 1);
+	width:139px;
+	height:77px;
+	position:absolute;
+	left:143px;
+	top:195px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:23px;
+	letter-spacing:0;
+}
+.rectangle_2_1_18 { 
 	background-color:rgba(23.000000528991222, 29.000000171363354, 45.00000111758709, 1);
 	width:340px;
-	height:1030px;
+	height:1989px;
 	position:absolute;
 	left:0px;
 	top:38px;
 }
-.e104_3 { 
+.rectangle_3_104_3 { 
 	background-color:rgba(11.000000294297934, 12.000000234693289, 23.000000528991222, 1);
 	width:1920px;
 	height:38px;
@@ -118,7 +130,7 @@
 	left:0px;
 	top:0px;
 }
-.e101_2 { 
+.blackphoenixnetwork_101_2 { 
 	color:rgba(255, 255, 255, 1);
 	width:340px;
 	height:38px;
