--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 	border-top-right-radius:30px;
 	border-bottom-left-radius:30px;
 	border-bottom-right-radius:30px;
-	background-image:url(images/11307s6d9s0bwv8sacl6ks5evjqtvov7b7lmhlurzqavxh1m8qhkwbs5c8f0ms8flv__ykdvgb076kgrpibkjm_rjtkploxl_1.png);
+	background-image:url(https://cdn.discordapp.com/attachments/839929839464742983/908085175060140052/11307S6D9S0bWv8SAcL6Ks5EvJqtvOV7B7lMhLuRZqAVXH1M8qHKwBS5C8F0Ms8fLV__yKDVGb076kgrPIbkJm-rjTkPLOxL.webp);
 	background-repeat:no-repeat;
 	background-size:cover;
 }
