--- a/style.css
+++ b/style.css
@@ -1,144 +1,300 @@
-.1_2 { 
+.3_12 { 
 	overflow:hidden;
 }
-.browserwindow_1_2 { 
-	background-color:rgba(11.000000294297934, 12.000000234693289, 23.000000528991222, 1);
+.website_3_12 { 
+	background-color:rgba(0, 0, 0, 0);
 	width:1920px;
-	height:2027px;
+	height:1080px;
 	position:absolute;
 }
-.rectangle_1_1_16 { 
+.home_screen_3_49 { 
+	width:1620px;
+	height:1040px;
+	position:absolute;
+	left:300px;
+	top:40px;
+}
+.home_screen_3_5 { 
 	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
-	width:1580px;
-	height:1989px;
-	position:absolute;
-	left:340px;
-	top:38px;
-}
-.rectangle_5_104_8 { 
-	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-	width:732px;
-	height:606px;
-	position:absolute;
-	left:1158px;
-	top:711px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.104_2 { 
-	border:10px solid rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-}
-.11307s6d9s0bwv8sacl6ks5evjqtvov7b7lmhlurzqavxh1m8qhkwbs5c8f0ms8flv__ykdvgb076kgrpibkjm_rjtkploxl_1_104_2 { 
-	width:1520px;
-	height:598.4251708984375px;
-	position:absolute;
-	left:370px;
-	top:80px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-	background-image:url(https://cdn.discordapp.com/attachments/839929839464742983/908085175060140052/11307S6D9S0bWv8SAcL6Ks5EvJqtvOV7B7lMhLuRZqAVXH1M8qHKwBS5C8F0Ms8fLV__yKDVGb076kgrPIbkJm-rjTkPLOxL.webp);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.rectangle_4_104_7 { 
-	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-	width:726px;
-	height:606px;
-	position:absolute;
-	left:376px;
-	top:708px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.astroneer_xbox_01_1_104_9 { 
-	width:726px;
-	height:303px;
-	position:absolute;
-	left:376px;
-	top:708px;
-	border-radius:Symbol(figma.mixed)px;
-	background-image:url(images/astroneer_xbox_01_1.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.test_104_10 { 
-	color:rgba(255, 255, 255, 1);
-	width:732px;
-	height:303px;
-	position:absolute;
-	left:1158px;
-	top:1011px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:23px;
-	letter-spacing:0;
-}
-.test_104_12 { 
-	color:rgba(255, 255, 255, 1);
-	width:732px;
-	height:303px;
-	position:absolute;
-	left:370px;
-	top:1011px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:23px;
-	letter-spacing:0;
-}
-.20201222145428_1_1_104_11 { 
-	width:732px;
-	height:300px;
-	position:absolute;
-	left:1158px;
-	top:711px;
-	border-radius:Symbol(figma.mixed)px;
-	background-image:url(images/20201222145428_1_1.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.soon_127_13 { 
-	color:rgba(255, 255, 255, 1);
-	width:139px;
-	height:77px;
-	position:absolute;
-	left:143px;
-	top:195px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:23px;
-	letter-spacing:0;
-}
-.rectangle_2_1_18 { 
-	background-color:rgba(23.000000528991222, 29.000000171363354, 45.00000111758709, 1);
-	width:340px;
-	height:1989px;
+	width:1620px;
+	height:1040px;
 	position:absolute;
 	left:0px;
-	top:38px;
+	top:0px;
 }
-.rectangle_3_104_3 { 
+.home_box_3_3_42 { 
+	width:389px;
+	height:401px;
+	position:absolute;
+	left:1196px;
+	top:560px;
+}
+.box_home_box_1_3_43 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
+	width:389px;
+	height:401px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+}
+.button_home_box_1_3_44 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
+	width:200px;
+	height:46px;
+	position:absolute;
+	left:95px;
+	top:340px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+}
+.buttontext_home_box_1_3_45 { 
+	color:rgba(255, 255, 255, 1);
+	width:200px;
+	height:46px;
+	position:absolute;
+	left:95px;
+	top:340px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
+}
+.text_home_box_1_3_46 { 
+	color:rgba(255, 255, 255, 1);
+	width:389px;
+	height:139px;
+	position:absolute;
+	left:0px;
+	top:201px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
+}
+.image_home_box_1_3_47 { 
+	width:389px;
+	height:201px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	border-radius:Symbol(figma.mixed)px;
+	background-image:url(images/image_home_box_1.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.home_box_2_3_36 { 
+	width:389px;
+	height:401px;
+	position:absolute;
+	left:615px;
+	top:560px;
+}
+.box_home_box_1_3_37 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
+	width:389px;
+	height:401px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+}
+.button_home_box_1_3_38 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
+	width:200px;
+	height:46px;
+	position:absolute;
+	left:95px;
+	top:340px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+}
+.buttontext_home_box_1_3_39 { 
+	color:rgba(255, 255, 255, 1);
+	width:200px;
+	height:46px;
+	position:absolute;
+	left:95px;
+	top:340px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
+}
+.text_home_box_1_3_40 { 
+	color:rgba(255, 255, 255, 1);
+	width:389px;
+	height:139px;
+	position:absolute;
+	left:0px;
+	top:201px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
+}
+.image_home_box_1_3_41 { 
+	width:389px;
+	height:201px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	border-radius:Symbol(figma.mixed)px;
+	background-image:url(images/image_home_box_1.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.home_box_1_3_35 { 
+	width:389px;
+	height:401.0000305175781px;
+	position:absolute;
+	left:35px;
+	top:560px;
+}
+.box_home_box_1_3_6 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
+	width:389px;
+	height:401px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+}
+.button_home_box_1_3_13 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
+	width:200px;
+	height:46px;
+	position:absolute;
+	left:95px;
+	top:340px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+}
+.buttontext_home_box_1_3_14 { 
+	color:rgba(255, 255, 255, 1);
+	width:200px;
+	height:46px;
+	position:absolute;
+	left:95px;
+	top:340px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
+}
+.text_home_box_1_3_15 { 
+	color:rgba(255, 255, 255, 1);
+	width:389px;
+	height:139px;
+	position:absolute;
+	left:0px;
+	top:201px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
+}
+.image_home_box_1_3_8 { 
+	width:389px;
+	height:201px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	border-radius:Symbol(figma.mixed)px;
+	background-image:url(images/image_home_box_1.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.image_home_main_3_7 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+	width:1550px;
+	height:500px;
+	position:absolute;
+	left:35px;
+	top:30px;
+	border-top-left-radius:30px;
+	border-top-right-radius:30px;
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+	background-image:url(images/image_home_main.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.3_7 { 
+	border:15px solid rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
+}
+.topbar_2_3 { 
+	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
 	background-color:rgba(11.000000294297934, 12.000000234693289, 23.000000528991222, 1);
 	width:1920px;
-	height:38px;
+	height:40px;
 	position:absolute;
 	left:0px;
 	top:0px;
 }
-.blackphoenixnetwork_101_2 { 
+.blackphoenixnetwork_3_53 { 
 	color:rgba(255, 255, 255, 1);
-	width:340px;
-	height:38px;
+	width:300px;
+	height:40px;
 	position:absolute;
 	left:0px;
 	top:0px;
 	font-family:Roboto;
 	text-align:center;
-	font-size:23px;
+	font-size:24px;
 	letter-spacing:0;
 }
+.sidebar_2_4 { 
+	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
+	width:300px;
+	height:1040px;
+	position:absolute;
+	left:0px;
+	top:40px;
+}
+.rectangle_1_3_54 { 
+	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
+	width:285px;
+	height:60px;
+	position:absolute;
+	left:7px;
+	top:48px;
+	border-top-left-radius:10px;
+	border-top-right-radius:10px;
+	border-bottom-left-radius:10px;
+	border-bottom-right-radius:10px;
+}
+.home_3_55 { 
+	color:rgba(255, 255, 255, 1);
+	width:285px;
+	height:60px;
+	position:absolute;
+	left:7px;
+	top:48px;
+	font-family:Roboto;
+	text-align:center;
+	font-size:36px;
+	letter-spacing:0;
+}
+
