--- a/style.css
+++ b/style.css
@@ -1,300 +1,17 @@
 .3_12 { 
 	overflow:hidden;
 }
-.website_3_12 { 
-	background-color:rgba(0, 0, 0, 0);
-	width:1920px;
-	height:1080px;
-	position:absolute;
-}
-.home_screen_3_49 { 
-	width:1620px;
-	height:1040px;
-	position:absolute;
-	left:300px;
-	top:40px;
-}
-.home_screen_3_5 { 
-	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
-	width:1620px;
-	height:1040px;
-	position:absolute;
-	left:0px;
-	top:0px;
-}
-.home_box_3_3_42 { 
-	width:389px;
-	height:401px;
-	position:absolute;
-	left:1196px;
-	top:560px;
-}
-.box_home_box_1_3_43 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-	width:389px;
-	height:401px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.button_home_box_1_3_44 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
-	width:200px;
-	height:46px;
-	position:absolute;
-	left:95px;
-	top:340px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.buttontext_home_box_1_3_45 { 
-	color:rgba(255, 255, 255, 1);
-	width:200px;
-	height:46px;
-	position:absolute;
-	left:95px;
-	top:340px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.text_home_box_1_3_46 { 
-	color:rgba(255, 255, 255, 1);
-	width:389px;
-	height:139px;
-	position:absolute;
-	left:0px;
-	top:201px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.image_home_box_1_3_47 { 
-	width:389px;
-	height:201px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-radius:Symbol(figma.mixed)px;
-	background-image:url(images/image_home_box_1.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.home_box_2_3_36 { 
-	width:389px;
-	height:401px;
-	position:absolute;
-	left:615px;
-	top:560px;
-}
-.box_home_box_1_3_37 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-	width:389px;
-	height:401px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.button_home_box_1_3_38 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
-	width:200px;
-	height:46px;
-	position:absolute;
-	left:95px;
-	top:340px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.buttontext_home_box_1_3_39 { 
-	color:rgba(255, 255, 255, 1);
-	width:200px;
-	height:46px;
-	position:absolute;
-	left:95px;
-	top:340px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.text_home_box_1_3_40 { 
-	color:rgba(255, 255, 255, 1);
-	width:389px;
-	height:139px;
-	position:absolute;
-	left:0px;
-	top:201px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.image_home_box_1_3_41 { 
-	width:389px;
-	height:201px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-radius:Symbol(figma.mixed)px;
-	background-image:url(images/image_home_box_1.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.home_box_1_3_35 { 
-	width:389px;
-	height:401.0000305175781px;
-	position:absolute;
-	left:35px;
-	top:560px;
-}
-.box_home_box_1_3_6 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-	width:389px;
-	height:401px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.button_home_box_1_3_13 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
-	width:200px;
-	height:46px;
-	position:absolute;
-	left:95px;
-	top:340px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-}
-.buttontext_home_box_1_3_14 { 
-	color:rgba(255, 255, 255, 1);
-	width:200px;
-	height:46px;
-	position:absolute;
-	left:95px;
-	top:340px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.text_home_box_1_3_15 { 
-	color:rgba(255, 255, 255, 1);
-	width:389px;
-	height:139px;
-	position:absolute;
-	left:0px;
-	top:201px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.image_home_box_1_3_8 { 
-	width:389px;
-	height:201px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	border-radius:Symbol(figma.mixed)px;
-	background-image:url(images/image_home_box_1.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.image_home_main_3_7 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	width:1550px;
-	height:500px;
-	position:absolute;
-	left:35px;
-	top:30px;
-	border-top-left-radius:30px;
-	border-top-right-radius:30px;
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-	background-image:url(images/image_home_main.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.3_7 { 
-	border:15px solid rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-}
-.topbar_2_3 { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(11.000000294297934, 12.000000234693289, 23.000000528991222, 1);
-	width:1920px;
-	height:40px;
-	position:absolute;
-	left:0px;
-	top:0px;
-}
-.blackphoenixnetwork_3_53 { 
-	color:rgba(255, 255, 255, 1);
-	width:300px;
-	height:40px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.sidebar_2_4 { 
-	background-color:rgba(33.00000183284283, 40.00000141561031, 64.00000378489494, 1);
-	width:300px;
-	height:1040px;
-	position:absolute;
-	left:0px;
-	top:40px;
-}
-.rectangle_1_3_54 { 
-	background-color:rgba(24.000000469386578, 23.000000528991222, 42.000001296401024, 1);
-	width:285px;
-	height:60px;
-	position:absolute;
-	left:7px;
-	top:48px;
-	border-top-left-radius:10px;
-	border-top-right-radius:10px;
-	border-bottom-left-radius:10px;
-	border-bottom-right-radius:10px;
-}
-.home_3_55 { 
-	color:rgba(255, 255, 255, 1);
-	width:285px;
-	height:60px;
-	position:absolute;
-	left:7px;
-	top:48px;
-	font-family:Roboto;
-	text-align:center;
-	font-size:36px;
-	letter-spacing:0;
+
+*:fullscreen {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
